--- a/00-HTML-CSS-basics/index.html
+++ b/00-HTML-CSS-basics/index.html
@@ -15,10 +15,11 @@
 
    <p id="joke"></p>
 
+   <button type="button" onclick="repoSearch()">vos sos un botón!</button>
+
   </section>
 
-  <button type="button" onclick="joke()">vos sos un botón!</button>
-
+  
 
 
 <!--
