hasta el punto 11

--- a/01-JS-DOM-APIs/index.html
+++ b/01-JS-DOM-APIs/index.html
@@ -7,13 +7,15 @@
   <script type="text/javascript" src="script.js"></script>
 </head>
 
-<body onload="FadeIn('fade')";>
+<body onload="FadeIn('fade')">
   
   <section id="fade">
 
-   <p>Hello world!</p>
+   <h1>Hello world!</h1>
 
    <p id="joke"></p>
+
+   <input id="search" type="text" name="repo">
 
    <button type="button" onclick="repoSearch()">vos sos un botón!</button>
 
@@ -29,7 +31,7 @@
   "Take you, rock," he said. He squinted at it.<br>
   Ah yes, here we have the nasty big flat rock, sitting doing nothing, just amoral and dull, and it sits like an island in the polluted pool. The pool is a tiny lake on the little island, and the island is in a drowned crater. The crater is a volcanic crater, the volcano forms part of an island in a big inland sea. The inland sea is like a giant lake on a continent and the continent is like an island sitting in the seas of the planet. The planet is like an island on the sea of space within its system, and the system floats within the cluster, which is like an island in the sea of the galaxy, which is like an island in the archipelago of of its local group, which is an island within the universe; the universe is like an island floating in a sea of space in the Continua, and they float like islands in the Reality, and…<br>
   But down through the Continua, the Universe, the Local Group, the Galaxy, the Cluster, the System, the Planet, the Continent, the Island, the Lake, the Island… the rock remained. AND THAT MEANT THE ROCK, THE CRAPPY AWFUL ROCK HERE WAS THE CENTER OF THE UNIVERSE, THE CONTINUA, THE WHOLE REALITY!”<br>
-  -- Iain M. Banks
+  - Iain M. Banks
   </p>
 
   <img src="https://astroengine.files.wordpress.com/2013/06/iain-banks.jpg">
