andando primera unidad

--- a/01-JS-DOM-APIs/index.html
+++ b/01-JS-DOM-APIs/index.html
@@ -7,7 +7,7 @@
   <script type="text/javascript" src="script.js"></script>
 </head>
 
-<body onload="FadeIn('fade')">
+<body onload="fadeIn('fade');">
   
   <section id="fade">
 
@@ -17,7 +17,7 @@
 
    <input id="search" type="text" name="repo">
 
-   <button type="button" onclick="repoSearch()">vos sos un botón!</button>
+   <button type="button" onclick="repoSearch();">vos sos un botón!</button>
 
   </section>
 
