--- a/04-HTML5-APIs/index.html
+++ b/04-HTML5-APIs/index.html
@@ -22,6 +22,7 @@
 	<textarea id="holder" ng-model = "text"></textarea>
 	<button ng-click = "saveContents()">Save</button>
 	<button ng-click = "clearContents()">Clear</button>
+	<button ng-click = "wsEcho()">Echo</button>
 
 </body>
 </html>
