--- a/04-HTML5-APIs/index.html
+++ b/04-HTML5-APIs/index.html
@@ -24,5 +24,8 @@
 	<button ng-click = "clearContents()">Clear</button>
 	<button ng-click = "wsEcho()">Echo</button>
 
+	<canvas id = "canvas"></canvas>
+	<button ng-click = "drawShapes()">Draw</button>
+
 </body>
 </html>
