--- a/04-HTML5-APIs/index.html
+++ b/04-HTML5-APIs/index.html
@@ -40,6 +40,14 @@
 		<canvas id="canvas2"></canvas>
 	</section>
 	
+	<section>
+		<h2>SVG</h2>
+		<svg height="210" width="500">
+		  <polygon points="100,10 40,198 190,78 10,78 160,198" style="fill:lime;stroke:purple;stroke-width:5;fill-rule:evenodd;"/>
+		</svg>
+	</section>
+	
+
 
 </body>
 </html>
